@@ -48,6 +48,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to Thomas Pulickal - jemajoign
 - bug #2832600 [export] Slow export when having lots of databases
 - bug #2537766 [import] Comments are stripped when editing store procedures 
+- bug #2852370 [operations] Renaming database deletes triggers 
 
 3.2.2.0 (2009-09-13)
 - bug #2825293 [structure] Default value for a BIT column
